# GameEngineFromScratch

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build-emscripten.bat  build-emscripten.sh  build-ninja.bat  build-ninja.sh  build-orbis.bat  build-psp2.bat  build-with-clang.bat  build-with-clang.sh  build-xcode.sh  build.bat  build.sh  build_android.sh  build_bison.sh  build_bullet-android.sh  build_bullet-emscripten.bat  build_bullet-orbis.bat  build_bullet-psp2.bat  build_bullet.bat  build_bullet.sh  build_cef.bat  build_cef.sh  build_cmft.bat  build_cmft.sh  build_crossguid-android.sh  build_crossguid-emscripten.bat  build_crossguid-emscripten.sh  build_crossguid-orbis.bat  build_crossguid-psp2.bat  build_crossguid.bat  build_crossguid.sh  build_freetype.sh  (+39 more)
Editor/: CMakeLists.txt  Editor.html  EditorConfig.cpp  EditorLogic.cpp  EditorLogic.hpp  process_helper_mac.cpp
Editor/Resources/: cef.pak  cef_100_percent.pak  cef_200_percent.pak  cef_extensions.pak
Editor/mac/: Info.plist  helper-Info.plist
Editor/win/: Editor.rc  resource.h
Framework/: CMakeLists.txt
Framework/Ability/: Ability.hpp  Animatable.hpp  Boundable.hpp  Hitable.hpp  Intersectable.hpp  MaterialContainer.hpp
Framework/Algorism/: AST.hpp  AaBb.hpp  BVH.hpp  Bezier.hpp  Bresenham.hpp  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorCppSnippet.cpp  CodeGeneratorGraphviz.cpp  Color.hpp  ColorSpaceConversion.hpp  Curve.hpp  Gjk.hpp  Hit.hpp  HitableList.hpp  HuffmanTree.hpp  Linear.hpp  MatrixComposeDeCompose.hpp  MatrixComposeDecompose.hpp  PathTracing.hpp  Ray.hpp  Tree.hpp  TriangleRasterization.hpp  aabb.hpp  numerical.hpp  quickhull.cpp  quickhull.hpp
Framework/CodeGen/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  CodeGeneratorCppSnippet.cpp  CodeGeneratorGraphviz.cpp
Framework/Codec/: BMP.hpp  OGEX.hpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AnimationManager.cpp  AnimationManager.hpp  AssetLoader.cpp  AssetLoader.hpp  AudioClip.cpp  AudioClip.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.hpp  BaseSceneObject.hpp  BlockAllocator.cpp  BlockAllocator.hpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  DebugManager.cpp  DebugManager.hpp  ForwardRenderPass.cpp  ForwardRenderPass.hpp  FrameStructure.hpp  GameLogic.cpp  GameLogic.hpp  GfxConfiguration.h  GfxConfiguration.hpp  GfxStructures.hpp  GraphicsManager.cpp  GraphicsManager.hpp  HUDPass.cpp  HuffmanTree.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  Mesh.h  Mesh.hpp  ParameterValueMap.hpp  (+48 more)
Framework/DispatchPass/: BRDFIntegrator.cpp  BRDFIntegrator.hpp  BaseDispatchPass.cpp  BaseDispatchPass.hpp  CMakeLists.txt  RayTracePass.cpp  RayTracePass.hpp
Framework/DrawPass/: BaseDrawPass.cpp  BaseDrawPass.hpp  BasePass.cpp  BasePass.hpp  CMakeLists.txt  ForwardGeometryPass.hpp  ForwardRenderPass.cpp  HUDPass.cpp  HUDPass.hpp  OverlayPass.hpp  RayTracePass.cpp  RayTracePass.hpp  ShadowMapPass.cpp  ShadowMapPass.hpp  SkyBoxPass.cpp  SkyBoxPass.hpp  TerrainPass.cpp  TerrainPass.hpp
Framework/DrawPhase/: CMakeLists.txt  ForwardRenderPhase.cpp  ForwardRenderPhase.hpp  HUDPhase.cpp  HUDPhase.hpp  SkyBoxPhase.cpp  SkyBoxPhase.hpp  TerrainPhase.cpp  TerrainPhase.hpp
Framework/DrawSubPass/: BaseSubPass.hpp  CMakeLists.txt  DebugOverlaySubPass.cpp  DebugOverlaySubPass.hpp  GeometrySubPass.cpp  GeometrySubPass.hpp  GuiSubPass.cpp  GuiSubPass.hpp  SkyBoxSubPass.cpp  SkyBoxSubPass.hpp  TerrainSubPass.cpp  TerrainSubPass.hpp
Framework/Encoder/: PPM.hpp
Framework/GeomMath/: Box.cpp  Box.hpp  CMakeLists.txt  Plane.hpp  Shape.cpp  Shape.hpp  Sphere.hpp  aabb.hpp  geommath.h  geommath.hpp  half_float.hpp  random.hpp
Framework/Geometries/: Box.cpp  Box.hpp  CMakeLists.txt  ConvexHull.hpp  Geometry.cpp  Geometry.hpp  Plane.cpp  Plane.hpp  Polyhedron.cpp  Polyhedron.hpp  Sphere.cpp  Sphere.hpp
Framework/Interface/: DrawPass.hpp  IAllocator.hpp  IAnimationManager.hpp  IApplication.hpp  IAssetLoader.hpp  IAudioClipParser.hpp  IDebugManager.hpp  IDispatchPass.hpp  IDrawPass.hpp  IDrawPhase.hpp  IDrawSubPass.hpp  IGameLogic.hpp  IGraphicsManager.hpp  IImageEncoder.hpp  IInputManager.hpp  IMemoryManager.hpp  IPass.hpp  IPhase.hpp  IPhysicsManager.hpp  IPipelineStateManager.hpp  IRuntimeModule.hpp  ISceneManager.hpp  ISceneParser.hpp  IShaderManager.hpp  ISubPass.hpp  ImageParser.hpp  Interface.hpp  SceneParser.hpp
Framework/Manager/: AnimationManager.cpp  AnimationManager.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSceneNode.hpp  BaseSceneObject.hpp  BlockAllocator.cpp  BlockAllocator.hpp  CMakeLists.txt  DebugManager.cpp  DebugManager.hpp  GameLogic.hpp  GraphicsManager.cpp  GraphicsManager.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  PhysicsManager.hpp  PipelineStateManager.cpp  PipelineStateManager.hpp  SceneManager.cpp  SceneManager.hpp  StackAllocator.cpp  StackAllocator.hpp
Framework/Parser/: ASTC.cpp  (+24 more)
Platform/: CMakeLists.txt  CrossPlatformApp.hpp  CrossPlatformGfxApp.hpp  Emscripten  TGraphicsManager.hpp
RHI/: CMakeLists.txt
Test/: ASTNodeTest.cpp  AnimationTest.cpp  AssetLoaderTest.cpp  AstcParserTest.cpp  BVHTest.cpp  BasicWindowTest.cpp  BezierCubic1DTest.cpp  BulletTest.cpp  CMakeLists.txt  ChronoTest.cpp  CodeGeneratorTest.cpp  ColorSpaceConversionTest.cpp  CudaTest.cu  D3d12RHITest.cpp  DdsParserTest.cpp  GeomMathTest.cpp  GjkTest.cpp  GraphicsWindowTest.cpp  HdrParserTest.cpp  ImGuiTest.cpp  JpegParserTest.cpp  LinearInterpolateTest.cpp  MGEMXParserTest.cpp  NumericalMethodsTest.cpp  OgexParserTest.cpp  OpenALTest.cpp  OptixTest.cu  OptixTest.h  OptixTest.hpp  PPMEncoderTest.cpp  PngParserTest.cpp  PolarDecomposeTest.cpp  PvrParserTest.cpp  QRDecomposeTest.cpp  QuickhullTest.cpp  RandomTest.cpp  RasterizationTest.cpp  RayTracingCUDATest.cu  RayTracingCamera.hpp  RayTracingTest.cpp  (+18 more)
Viewer/: CMakeLists.txt  Viewer.html  ViewerConfig.cpp  ViewerLogic.cpp  ViewerLogic.hpp  main.cpp
(+1267 files in other folders)
